1) Added text how to use the program. 2) Added small headings for players and results. 3) Pre-allocated space for the two rows of player-buttons for each team.

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,11 @@ h2 {
 	font-size: 1.2rem;
 	margin: 0 0 0.75rem 0;
 }
-
+t1 {
+	font-size: 0.7rem;
+	margin: 0 0 0.75rem 0;
+	text-align: left;
+}
 
 /* Pattern styles */
 .container {
@@ -55,6 +59,7 @@ h2 {
 .btn-group {
 	display: flex;
 	flex-flow: row wrap;
+	height: 6rem;
 }
 
 .addplayer-group {
